# bookscraper_frontend

./: README.md  app.py  dash-app-deployment.yaml  dash-app-service.yaml  docker-compose.yml  dockerfile  graphs.py  initialization.ps1  logger.py  putdown.ps1  pyproject.toml  test_app.py  test_graph.py
