[tool.poetry]
name = "bookscraper-frontend"
version = "0.1.0"
description = ""
authors = ["Tamir Einhorn Salem <tamtamireinhorn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.2"
plotly = "^5.20.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
