[tool.poetry]
name = "bookscraper-frontend"
version = "0.1.0"
description = ""
authors = ["Tamir Einhorn Salem <tamtamireinhorn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.20.0"
pandas = "^2.2.1"
dash = "^2.16.1"
pytest = "^8.1.2"
numpy = "^1.26.4"
requests = "^2.31.0"
selenium = "^4.20.0"
debugpy = "^1.8.1"
chromedriver-autoinstaller = "^0.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
